--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
     </div>
 
     <!-- Our JavaScript -->
-    <script src="nt.js"></script>
+    <script type="module" src="nt.js"></script>
 </body>
+
 </html>
