--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
 </head>
 <body>
     <!-- Your existing content -->
+    <h2>Admin Login</h2>
+    <input type="email" id="email" placeholder="Admin Email">
+    <input type="password" id="password" placeholder="Password">
+    <button onclick="login()">Login</button>
+    <p id="error" style="color:red;"></p>
     
     <!-- Floating Notebook -->
     <div class="floating-notebook" id="notebook">
@@ -44,3 +49,4 @@
 </body>
 
 </html>
+
