--- a/index.html
+++ b/index.html
@@ -82,9 +82,10 @@
         </div>
     </div>
 
-    <script src="js/auth.js"></script>
+    <script src="auth.js"></script>
     <!-- Font Awesome for icons -->
     <script src="https://kit.fontawesome.com/64d58efce2.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
+
