--- a/index.html
+++ b/index.html
@@ -3,90 +3,57 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Firebase Auth</title>
-    <link rel="stylesheet" href="style.css">
-    <!-- Firebase SDK -->
-    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
+    <title>Firebase Auth Demo</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="container">
-        <div class="forms-container">
-            <div class="signin-signup">
-                <!-- Login Form -->
-                <form class="sign-in-form" id="loginForm">
-                    <h2 class="title">Sign in</h2>
-                    <div class="input-field">
-                        <i class="fas fa-user"></i>
-                        <input type="email" id="loginEmail" placeholder="Email" required>
-                    </div>
-                    <div class="input-field">
-                        <i class="fas fa-lock"></i>
-                        <input type="password" id="loginPassword" placeholder="Password" required>
-                    </div>
-                    <button type="submit" class="btn solid">Login</button>
-                    <p class="social-text">Or Sign in with social platforms</p>
-                    <div class="social-media">
-                        <a href="#" class="social-icon">
-                            <i class="fab fa-google"></i>
-                        </a>
-                    </div>
-                    <p class="account-text">Don't have an account? <a href="#" id="sign-up-btn">Sign up</a></p>
-                </form>
-
-                <!-- Signup Form -->
-                <form class="sign-up-form" id="signupForm">
-                    <h2 class="title">Sign up</h2>
-                    <div class="input-field">
-                        <i class="fas fa-user"></i>
-                        <input type="text" id="signupName" placeholder="Full Name" required>
-                    </div>
-                    <div class="input-field">
-                        <i class="fas fa-envelope"></i>
-                        <input type="email" id="signupEmail" placeholder="Email" required>
-                    </div>
-                    <div class="input-field">
-                        <i class="fas fa-lock"></i>
-                        <input type="password" id="signupPassword" placeholder="Password" required>
-                    </div>
-                    <button type="submit" class="btn solid">Sign up</button>
-                    <p class="social-text">Or Sign up with social platforms</p>
-                    <div class="social-media">
-                        <a href="#" class="social-icon">
-                            <i class="fab fa-google"></i>
-                        </a>
-                    </div>
-                    <p class="account-text">Already have an account? <a href="#" id="sign-in-btn">Sign in</a></p>
-                </form>
-            </div>
+    <div class="auth-container">
+        <div class="form-container" id="login-form">
+            <h2>Login</h2>
+            <form id="login">
+                <div class="form-group">
+                    <label for="login-email">Email</label>
+                    <input type="email" id="login-email" required>
+                </div>
+                <div class="form-group">
+                    <label for="login-password">Password</label>
+                    <input type="password" id="login-password" required>
+                </div>
+                <button type="submit">Login</button>
+            </form>
+            <p>Don't have an account? <a href="#" id="show-signup">Sign up</a></p>
+            <p id="login-error" class="error-message"></p>
         </div>
 
-        <div class="panels-container">
-            <div class="panel left-panel">
-                <div class="content">
-                    <h3>New here?</h3>
-                    <p>Create an account and start your journey with us!</p>
-                    <button class="btn transparent" id="sign-up-btn2">Sign up</button>
+        <div class="form-container" id="signup-form" style="display: none;">
+            <h2>Sign Up</h2>
+            <form id="signup">
+                <div class="form-group">
+                    <label for="signup-email">Email</label>
+                    <input type="email" id="signup-email" required>
                 </div>
-                <img src="images/log.svg" class="image" alt="">
-            </div>
-            <div class="panel right-panel">
-                <div class="content">
-                    <h3>One of us?</h3>
-                    <p>If you already have an account, just sign in.</p>
-                    <button class="btn transparent" id="sign-in-btn2">Sign in</button>
+                <div class="form-group">
+                    <label for="signup-password">Password</label>
+                    <input type="password" id="signup-password" required>
                 </div>
-                <img src="images/register.svg" class="image" alt="">
-            </div>
+                <button type="submit">Sign Up</button>
+            </form>
+            <p>Already have an account? <a href="#" id="show-login">Login</a></p>
+            <p id="signup-error" class="error-message"></p>
+        </div>
+
+        <div class="welcome-container" id="welcome-screen" style="display: none;">
+            <h2>Welcome, <span id="user-email"></span>!</h2>
+            <button id="logout-btn">Logout</button>
         </div>
     </div>
 
-    <script  src="auth.js"></script>
-    <!-- Font Awesome for icons -->
-    <script src="https://kit.fontawesome.com/64d58efce2.js" crossorigin="anonymous"></script>
+    <!-- Firebase SDK -->
+    <script src="https://www.gstatic.com/firebasejs/9.6.0/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.6.0/firebase-auth-compat.js"></script>
+    
+    <!-- App scripts -->
+    <script src="firebase-config.js"></script>
+    <script src="app.js"></script>
 </body>
-
 </html>
-
-
